--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <main>
     <div id="time">00:00:00</div>
     <ul id="list"></ul>
+    <canvas id="chart"></canvas>
   </main>
   <footer>
     <div id="datastore"></div>
@@ -28,6 +29,7 @@
   <script src="js/moment.js"></script>
   <script src="js/moment-duration-format.js"></script>
   <script src="js/localforage.min.js"></script>
+  <script src="js/Chart.bundle.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
