Random thing to do function

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <button id="buttons_add">Add New Category</button>
       <button id="buttons_remove">Remove Category</button>
       <button id="buttons_download">Download Data</button>
+      <button id="buttons_rand">Pick Random</button>
     </div>
   </footer>
   <script src="js/moment.js"></script>
